# Chess

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  TODO  UML
UML/: yUML_Dementor  yuml_final
src/: adaptater.cc  adaptater.hh  chessboard-listener.cc  chessboard-listener.hh  chessboard.cc  chessboard.hh  client.cc  client.hh  client.hxx  engine.cc  engine.hh  history.cc  history.hh  human-player.cc  human-player.hh  main.cc  main_ai.cc  main_engine.cc  main_human.cc  move.cc  move.hh  parser.cc  parser.hh  player.cc  player.hh  plugin-auxiliary.cc  plugin-auxiliary.hh  quiet-move.cc  quiet-move.hh  rule-checker.cc  rule-checker.hh
src/AI/: AI.cc  AI.hh  eval_boards.cc  eval_boards.hh  main_ai.cc
src/network-api/: client-network-api.hh  client-network-api.hxx  common.hh  server-network-api.hh  server-network-api.hxx
src/piece/: Piece.cc  Piece.hh  Session.vim  bishop.cc  bishop.hh  king.cc  king.hh  knight.cc  knight.hh  pawn.cc  pawn.hh  piece.cc  piece.hh  queen.cc  queen.hh  rook.cc  rook.hh
src/plugin/: chessboard-interface.hh  color.hh  listener.hh  piece-type.hh  position.hh  position.hxx
tests/: bug_check.pgn  chessboard.cc  lose_utard.pgn  make_listener.sh
tests/basics/: checkmate.out  checkmate.pgn  draw.out  draw.pgn  invalid.out  invalid.pgn  lost.out  stalemate_enpassant.out  stalemate_enpassant.pgn  valid.out  valid.pgn
tests/false_test/: fail_checkmate.pgn  king_jump_more_than_possible.pgn  pawn_forward_backword.pgn  pawn_jump_to_promotion.pgn  queen_jump_over_own_pawn.pgn  rook_jump_over_own_pawn.pgn  tower_jump_over_own_pawn.pgn  tower_jump_vertically.pgn
tests/openings/: fried_liver_attack.out  king_indian_attack.out  king_indian_attack.pgn  nimzo_indian_defense.out
tests/simple_test/: en_passant.pgn  horse_jump_over_pawn.pgn  rock.pgn  simple_pawn_move_forward.pgn
tests/unit/: castle.pgn  checkmate.pgn  eat.pgn  forbidden_castle_move.pgn  forbidden_castle_wtf.pgn  forbidden_check.pgn  gradle.pgn  no-sense1.pgn  prise-en-passant.pgn
